--- a/Node-JS/e-commerce-microservice-application/order-service/package.json
+++ b/Node-JS/e-commerce-microservice-application/order-service/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "auth-service",
+  "name": "order-service",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -11,9 +11,7 @@
     "amqplib": "^0.10.3",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.6.2",
     "nodemon": "^2.0.20"
   },
-  "devDependencies": {},
   "description": ""
 }
