--- a/Node-JS/e-commerce-microservice-application/product-service/package.json
+++ b/Node-JS/e-commerce-microservice-application/product-service/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "auth-service",
+  "name": "product-service",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -14,6 +14,5 @@
     "mongoose": "^6.6.2",
     "nodemon": "^2.0.20"
   },
-  "devDependencies": {},
   "description": ""
 }
