--- a/Node-JS/e-commerce-microservice-application/package.json
+++ b/Node-JS/e-commerce-microservice-application/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "node-js",
+  "name": "e-commerce-microservice-application",
   "version": "1.0.0",
-  "description": "Fisrt Node JS Project",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,7 +9,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "jsonwebtoken": "^8.5.1",
-    "nodemon": "^2.0.20"
+    "jsonwebtoken": "^8.5.1"
   }
 }
