--- a/Node-JS/e-commerce-microservice-application/order-service/package.json
+++ b/Node-JS/e-commerce-microservice-application/order-service/package.json
@@ -9,8 +9,10 @@
   "license": "ISC",
   "dependencies": {
     "amqplib": "^0.10.3",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.6.2",
     "nodemon": "^2.0.20"
   },
   "description": ""
